[package]
name = "murph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.12", features = [ "derive" ]}
hex = "0.4.3"
lazy_static = "1.4.0"
once_cell = "1.16.0"
revm = { git = "https://github.com/iFrostizz/revm.git", branch = "opcode-u8" }
